--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
             </div>
         </div>
 
-        <div class="J_fashion_type md-warp fashion floor-md">
+        <div id="floorOne" class="J_fashion_type md-warp fashion floor-md">
             <div class="floor-title">
                 <a class="more" href="#">更多<b class="iconfont">&#xe611;</b></a>
                 <div class="floor-title-item">
@@ -776,7 +776,7 @@
             </div>
         </div>
 
-        <div class="J_life_type md-warp life floor-md">
+        <div id="floorTwo" class="J_life_type md-warp life floor-md">
             <div class="floor-title">
                 <a class="more" href="#">更多<b class="iconfont">&#xe611;</b></a>
                 <div class="floor-title-item">
@@ -1193,7 +1193,7 @@
             </div>
         </div>
 
-        <div class="J_infant_type md-warp infant-mom floor-md">
+        <div id="floorThree" class="J_infant_type md-warp infant-mom floor-md">
             <div class="floor-title">
                 <a class="more" href="#">更多<b class="iconfont">&#xe611;</b></a>
                 <div class="floor-title-item">
@@ -1941,10 +1941,10 @@
                         </div>
                     </li>
                 </ul>
-                <div class="go-floor">
-                    <a href="#" title=""><span>1F</span></a>
-                    <a href="#" title=""><span>2F</span></a>
-                    <a href="#" title=""><span>3F</span></a>
+                <div class="J_goto go-floor">
+                    <a href="#floorOne" title=""><span>1F</span></a>
+                    <a href="#floorTwo" title=""><span>2F</span></a>
+                    <a href="#floorThree" title=""><span>3F</span></a>
                 </div>
             </div>
         </div>
